Stricter selection of bounding boxes (preprocessing)

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,10 +390,17 @@
     "\n",
     "    # find the point with the maximum density of bounding boxes\n",
     "    bboxes_right: List[int] = [bb.right for bb in bboxes]\n",
-    "    numbers_loc: int = find_density_max(bboxes_right, desired_img_width)\n",
+    "    # x_loc is the vertical line to the left of the time axis and right of the numbers axis\n",
+    "    x_loc: int = find_density_max(bboxes_right, desired_img_width)\n",
     "\n",
     "    bboxes_bottom: List[int] = [bb.bottom for bb in bboxes]\n",
-    "    time_loc: int = find_density_max(bboxes_bottom, desired_img_height)\n",
+    "    # y_loc is the horizontal line undert the time axis and above the number axis\n",
+    "    y_loc: int = find_density_max(bboxes_bottom, desired_img_height)\n",
+    "\n",
+    "    # x_loc_right is the vertical line at the end of the time axis\n",
+    "    x_loc_right: int = x_loc + 610\n",
+    "    # y_loc_bottom is the horizontal line at the bottom of the number axis\n",
+    "    y_loc_bottom: int = y_loc + 185\n",
     "\n",
     "    bounding_boxes_time = []\n",
     "    bounding_boxes_numbers = []\n",
@@ -405,32 +412,40 @@
     "        x_max = int(bounding_box.right)\n",
     "        y_min = int(bounding_box.top)\n",
     "        y_max = int(bounding_box.bottom)\n",
-    "\n",
+    "        \n",
     "        # get the center point of the bounding box for comparison\n",
     "        x_center_bb, y_center_bb = bounding_box.center\n",
     "\n",
     "        # check if the bounding box is a number on the BP chart by comparing to the KDE index + a threshold\n",
-    "        if x_center_bb > numbers_loc - 15 and x_center_bb < numbers_loc + 2:\n",
+    "        if ((x_center_bb > x_loc-15 and x_center_bb < x_loc+2) and (y_center_bb > y_loc-2 and y_center_bb < y_loc_bottom+2)):\n",
     "            # Bounding box is in the top-right region\n",
     "            cv2.rectangle(\n",
     "                resized_image, (x_min, y_min), (x_max, y_max), (255, 255, 0), 1\n",
     "            )\n",
     "            bounding_boxes_numbers.append(bounding_box)\n",
     "        # check if the bounding box is a time on the BP chart by comparing to the KDE index + a threshold\n",
-    "        elif y_center_bb > time_loc - 10 and y_max < time_loc + 2:\n",
+    "        elif ((y_center_bb > y_loc-10 and y_max < y_loc+2) and (x_center_bb > x_loc-2 and x_center_bb < x_loc_right+2)):\n",
     "            cv2.rectangle(\n",
     "                resized_image, (x_min, y_min), (x_max, y_max), (255, 0, 255), 1\n",
     "            )\n",
     "            bounding_boxes_time.append(bounding_box)\n",
     "    # plot the lines of the KDE index found for debugging\n",
-    "    # numbers_start = (int(numbers_loc), 0)\n",
-    "    # numbers_end = (int(numbers_loc), desired_img_height)\n",
+    "    # numbers_start = (int(x_loc), 0)\n",
+    "    # numbers_end = (int(x_loc), desired_img_height)\n",
     "\n",
-    "    # time_start = (0, int(time_loc))\n",
-    "    # time_end = (desired_img_width, int(time_loc))\n",
+    "    # numbers2_start = (int(x_loc_right), 0)\n",
+    "    # numbers2_end = (int(x_loc_right), desired_img_height)\n",
+    "\n",
+    "    # time_start = (0, int(y_loc))\n",
+    "    # time_end = (desired_img_width, int(y_loc))\n",
+    "\n",
+    "    # time2_start = (0, int(y_loc_bottom))\n",
+    "    # time2_end = (desired_img_width, int(y_loc_bottom))\n",
     "\n",
     "    # cv2.line(resized_image, numbers_start, numbers_end, (255,255,0), 1)\n",
+    "    # cv2.line(resized_image, numbers2_start, numbers2_end, (255,255,0), 1)\n",
     "    # cv2.line(resized_image, time_start, time_end, (255,0,255), 1)\n",
+    "    # cv2.line(resized_image, time2_start, time2_end, (255,0,255), 1)\n",
     "\n",
     "    # Close all OpenCV windows, always do this or it will annoyingly not go away\n",
     "    # You can also manually quit out with ESC key.\n",
@@ -457,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -784,119 +799,119 @@
      "output_type": "stream",
      "text": [
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n"
+      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n"
      ]
     }
    ],
@@ -1056,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1064,14 +1079,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 653 correct clusters, 137 incorrect clusters. The accuracy is 82.66%\n",
-      "Number labels: 192 correct clusters, 183 incorrect clusters. The accuracy is 51.20%\n",
+      "Time labels: 651 correct clusters, 138 incorrect clusters. The accuracy is 82.51%\n",
+      "Number labels: 192 correct clusters, 181 incorrect clusters. The accuracy is 51.47%\n",
       "Method: dbscan\n",
-      "Time labels: 729 correct clusters, 127 incorrect clusters. The accuracy is 85.16%\n",
-      "Number labels: 306 correct clusters, 51 incorrect clusters. The accuracy is 85.71%\n",
+      "Time labels: 729 correct clusters, 130 incorrect clusters. The accuracy is 84.87%\n",
+      "Number labels: 304 correct clusters, 57 incorrect clusters. The accuracy is 84.21%\n",
       "Method: agglomerative\n",
-      "Time labels: 654 correct clusters, 139 incorrect clusters. The accuracy is 82.47%\n",
-      "Number labels: 186 correct clusters, 189 incorrect clusters. The accuracy is 49.60%\n"
+      "Time labels: 628 correct clusters, 165 incorrect clusters. The accuracy is 79.19%\n",
+      "Number labels: 185 correct clusters, 189 incorrect clusters. The accuracy is 49.47%\n"
      ]
     }
    ],
@@ -1093,7 +1108,7 @@
     "    for sheet, yolo_bb in yolo_data.items():\n",
     "        full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "        time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
-    "            yolo_bb, full_image_path\n",
+    "            yolo_bb, full_image_path, show_images=True\n",
     "        )\n",
     "        # Convert the bounding boxes to a list of strings with proper suffixes\n",
     "        expected_time_values = [\n",
