Constrained erroneous bounding boxes to time and number axes

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,18 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_time_generate(x):\n",
     "    # erroneous bounding boxes for time ROI\n",
     "    category_int = random.randint(0, 9)\n",
-    "    left_int = random.randint(105, 720)\n",
+    "    left_int = random.randint(127, 715)\n",
     "\n",
-    "    # slope and random points ABOVE the line (but coordinates flipped)\n",
-    "    slope, intercept = 1 / 3, 225\n",
-    "    top_int = random.uniform(225, slope * left_int + intercept)\n",
+    "    # slope and random points constrained to time (x) axis\n",
+    "    top_int = random.uniform(222, 234)\n",
     "\n",
     "    # input generated integers to bounding box\n",
     "    box = BoundingBox(\n",
@@ -716,11 +715,10 @@
     "def random_number_generate(x):\n",
     "    # erroneous bounding boxes for number ROI\n",
     "    category_int = random.randint(0, 9)\n",
-    "    left_int = random.randint(105, 720)\n",
+    "    left_int = random.randint(108, 117)\n",
     "\n",
-    "    # slope and random points BELOW the line (but coordinates flipped)\n",
-    "    slope, intercept = 1 / 3, 225\n",
-    "    top_int = random.uniform(slope * left_int + intercept, 430)\n",
+    "    # slope and random points constrained to number (y) axis\n",
+    "    top_int = random.uniform(235, 411)\n",
     "\n",
     "    # input generated integers to bounding box\n",
     "    box = BoundingBox(\n",
@@ -742,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -799,119 +797,119 @@
      "output_type": "stream",
      "text": [
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n"
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n"
      ]
     }
    ],
@@ -1071,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1079,14 +1077,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 651 correct clusters, 138 incorrect clusters. The accuracy is 82.51%\n",
-      "Number labels: 192 correct clusters, 181 incorrect clusters. The accuracy is 51.47%\n",
+      "Time labels: 663 correct clusters, 118 incorrect clusters. The accuracy is 84.89%\n",
+      "Number labels: 253 correct clusters, 117 incorrect clusters. The accuracy is 68.38%\n",
       "Method: dbscan\n",
-      "Time labels: 729 correct clusters, 130 incorrect clusters. The accuracy is 84.87%\n",
-      "Number labels: 304 correct clusters, 57 incorrect clusters. The accuracy is 84.21%\n",
+      "Time labels: 691 correct clusters, 127 incorrect clusters. The accuracy is 84.47%\n",
+      "Number labels: 254 correct clusters, 103 incorrect clusters. The accuracy is 71.15%\n",
       "Method: agglomerative\n",
-      "Time labels: 628 correct clusters, 165 incorrect clusters. The accuracy is 79.19%\n",
-      "Number labels: 185 correct clusters, 189 incorrect clusters. The accuracy is 49.47%\n"
+      "Time labels: 671 correct clusters, 113 incorrect clusters. The accuracy is 85.59%\n",
+      "Number labels: 245 correct clusters, 128 incorrect clusters. The accuracy is 65.68%\n"
      ]
     }
    ],
@@ -1239,7 +1237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1253,7 +1251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
